--- a/_posts/2022-09-26-adp26th.md
+++ b/_posts/2022-09-26-adp26th.md
@@ -55,8 +55,12 @@ tags: [ADP, Python]
 
 3. 철강제품의 불량률을 조사하고자 한다. 이 때, 불량률의 90%, 추정오차한계가 5% 이내가 되기 위하여 적절한 표본의 크기 중 최소값은 얼마인가?(5점)
    
+   ```python
+    # CODE
+   ```
 
 4. 다음은 1월부터 9월까지의 은의 가격이다.
+   
    ||1월|2월|3월|4월|5월|6월|7월|8월|9월|
    |-|-|-|-|-|-|-|-|-|-|
    |가격(USD/oz)|22.3||||||||40.2|
