--- a/_posts/2022-12-17-adp27th.md
+++ b/_posts/2022-12-17-adp27th.md
@@ -14,14 +14,20 @@ tags: [ADP, Python]
    - 1-1 EDA 데이터 탐색
 
      ```python
-     ### 기본적인 EDA 수행함. 결측치 여부, 데이터 타입 설명, 종속변수에 각 독립변수들 간의 관계는 막대그래프로 시각화함.
+     ### 기본적인 EDA 수행함. 
+     ### - 결측치 여부, 
+     ### - 데이터 타입 설명, 
+     ### - 종속변수에 각 독립변수들 간의 관계 막대그래프로 시각화.
      ```
 
    - 1-2 변수간 상관관계를 시각화하고 전처리가 필요함을 설명하라.
 
      ```python
-     ### 이건 pandas의 corr()를 구한 후 heatmap() 시각화한 후 설명 진행했다. 
-     ### 결국 특정 변수들 간 상관관계가 높은 변수들이 더러 있었고(해당 변수들 쌍을 다 적었음),
+     ### pandas의 corr()를 구한 후 
+     ### heatmap() 시각화한 후 설명 진행했다. 
+
+     ### 결국 특정 변수들 간 상관관계가 높은 변수들이 더러 있었고
+     ### (해당 변수들 쌍을 다 적었음),
      ### 원래라면 전처리할 때 다중공선성 방지를 위해 이런 변수들은 정리해줘야 하는데
      ### 컬럼명이 익명이라(V1~V17) 명시적으로 컬럼이 뭘 나타내는지를 추정할 수 없고, 
      ### 컬럼수가 많기 때문에 이런 상관성을 확인만 한 후 차원축소 등의 방법을 사용해야 한다고 적었음
@@ -32,16 +38,19 @@ tags: [ADP, Python]
    - 2-1. 차원축소의 종류와 장/단점
 
      ```python
-     ### PCA, LDA, tSNE 등을 적었고 이 부분은 책을 참조해서 적었다.
+     ### PCA, LDA, tSNE 등을 적었고 
+     ### 이 부분은 책을 참조해서 적었다.
      ```
 
    - 2-2. 추천한 한 가지를 실제로 수행하고 선택한 이유 설명
 
      ```python
-     ### LDA는 Binary Classification에서는 독립변수를 1개로 축소하는데 19개를 1개로 줄이면 손실되는 데이터가 너무 많을 것 같아 버리고
-     ### 데이터 손실률이 적어 분류모델 생성 전 전처리에 가장 많이 쓰이는 PCA를 선택했다.
+     ### LDA는 Binary Classification에서는 독립변수를 1개로 축소하는데
+     ### 19개를 1개로 줄이면 손실되는 데이터가 너무 많을 것 같아 버렸고
+     ### 데이터 손실률이 적어 분류모델 전처리에 가장 많이 쓰이는 PCA를 선택했다.
 
-     ### PCA의 적정한 컴포넌트 수를 찾기 위해 3~5개의 PCA를 만든 후 scree plot를 각각 그려보았고, 그 결과 3이 가장 적정함을 보였다.
+     ### PCA의 적정한 컴포넌트 수를 찾기 위해 
+     ### 3~5개의 PCA를 만든 후 scree plot를 각각 그려보았고, 그 결과 3이 가장 적정함을 보였다.
      ```
    
 
@@ -51,24 +60,30 @@ tags: [ADP, Python]
 
      ```python
      ### 책에 관련 문제에 대한 모범답안이 있어 최대한 비슷하게 적었다.
-     ### 결국 오버샘플링을 추천했다. 종속변수 값이 unbalance해서 언더샘플링할 경우 데이터가 1,000개 정도 날아가기 때문.
+     ### 결국 오버샘플링을 추천했다. 
+     ### 종속변수 값이 unbalance해서 언더샘플링할 경우 데이터가 1,000개 정도 날아가기 때문.
      ```
 
    - 3-2. 추천한 한 가지를 실제로 수행하고 선택한 이유 설명
 
      ```python
-     ### 오버샘플링 중 SMOTE를 사용했는데, 이유는 랜덤오버샘플링을 사용하기엔 y=1인 데이터 수가 19개? 정도밖에 없어서
+     ### 오버샘플링 중 SMOTE를 사용했는데, 
+     ###이유는 랜덤오버샘플링을 사용하기엔 y=1인 데이터 수가 19개? 정도밖에 없어서
      ### 19개를 복사하는건 의미가 없어서 데이터를 근사하게 만드는 SMOTE가 이 경우 더 유용하다고 판단했다고 적었다.
 
-     ### SMOTE한 후 샘플링 이전 데이터와 이후 데이터에 대한 scatter plot을 그려서 값이 적절히 샘플링되었음을 시각화했다.
+     ### SMOTE한 후 샘플링 이전 데이터와 이후 데이터에 대한 scatter plot을 그려서
+     ### 값이 적절히 샘플링되었음을 시각화했다.
      ```
 
    - 3-3. 현재까지 전처리한 데이터를 통해 모델 수행 후 결과 분석
 
      ```python
-     ### 분류모델의 국밥같은 존재인 sklearn의 Logisticregression과 RandomForestClassifier를 선정
+     ### 분류모델의 국밥같은 존재인 sklearn의 
+     ### Logisticregression과 RandomForestClassifier를 선정
      ### 모델만들고, 여태까지 전처리한 데이터 넣고 돌렸다.
-     ### 돌린 후 분류모델의 측정지표들인 confusion matrix, f1score, auc, roc_curve 등을 구하고
+
+     ### 돌린 후 분류모델의 측정지표들인 
+     ### confusion matrix, f1score, auc, roc_curve 등을 구하고
      ### roc curve에 대한 그래프 시각화를 두 모델 각각 진행했다. 
      ```
 
@@ -77,9 +92,10 @@ tags: [ADP, Python]
    - 4-1 이상탐지 모델 2가지 이상 기술, 장/단점 설명
 
      ```python
-     ### 여기서는 잘 몰라서 보통 분류모델을 많이 쓰며 위에서 안쓴 모델은 SVC나 KNN이 있다고 적었다.
+     ### 여기서는 잘 몰라서 보통 분류모델을 많이 쓰며
+     ### 위에서 안쓴 모델은 SVC나 KNN이 있다고 적었다.
      
-     ### 나중에 확인해보니 sklearn의 isolation forest나 DBSCAN 같은 알고리즘이 이상탐지를 위한 모델이라고 하더라..
+     ### sklearn의 isolation forest나 DBSCAN 같은 알고리즘이 이상탐지를 위한 모델이라고 하더라..
      ### 아마 여기서 감점되었을 듯
      ```
 
@@ -97,7 +113,8 @@ tags: [ADP, Python]
      ### 근데 Confusion Matrix 확인해보니 3번 모델은 False Negative가 각각 1개씩 있었다. KNN은 0개였다. 
      ### 여기에 착안해 이상탐지 모델은 정확도도 물론 중요하지만 False Negative 즉
      ### 사기 건수를 사기 건수가 아니라고 할 경우가 매우 치명적이므로 
-     ### 얼핏 정확도만 봤을 때 99%의 모델을 추천하는 것이아닌 FN이 없는 모델을 추천하는 것이 분석가의 올바른 관점이라고 적었다. 
+     ### 얼핏 정확도만 봤을 때 99%의 모델을 추천하는 것이아닌 
+     ### FN이 없는 모델을 추천하는 것이 분석가의 올바른 관점이라고 적었다. 
      ```
 
 
@@ -130,16 +147,19 @@ tags: [ADP, Python]
 
    ```python
    ### t검정을 사용한다고 생각함.
-   ### 상류/하류 간 독립이 아니라고 했으므로 독립표본 검정(쌍검정)이 아닌 대응표본 검정을 실행해야 한다고 생각했다.
+   ### 상류/하류 간 독립이 아니라고 했으므로 
+   ### 독립표본 검정(쌍검정)이 아닌 대응표본 검정을 실행해야 한다고 생각했다.
 
    ### 먼저 상류와 하류 데이터에 대한 각각의 정규성 검정을 했다.
    from scipy import stats
    stats.shapiro(df.up), stats.shapiro(df.down)
 
-   ### 이때 두 데이터 중 하나가 정규성을 만족 못하여 stats.ttest_rel을 쓰지 못하고, 윌콕슨 검정을 시행했다.
+   ### 이때 두 데이터 중 하나가 정규성을 만족 못하여 
+   ### stats.ttest_rel을 쓰지 못하고, 윌콕슨 검정을 시행했다.
    stats.wilcoxon(df.up, df.down) 
 
-   ### 시행 결과 p값이 0.05 미만으로 나와 귀무가설을 기각했다. 즉, 상류-하류간 어류다양성 점수에 유의미한 차이가 있었다.
+   ### 시행 결과 p값이 0.05 미만으로 나와 귀무가설을 기각했다. 
+   ### 즉, 상류-하류간 어류다양성 점수에 유의미한 차이가 있었다.
 
    ```
 
